페이지 인터렉션 대충 구현

--- a/quiz/templates/quiz/generatePage.html
+++ b/quiz/templates/quiz/generatePage.html
@@ -11,5 +11,10 @@
   </head>
   <body>
     <div>퀴즈를 만드는 페이지</div>
+    <span>이름</span>
+    <input for="이름" />
+    <a href={% url 'generate-result' quiz_set_id=22 %}>
+      <button>퀴즈 다 냈음</button>
+    </a>
   </body>
 </html>
