--- a/quiz/templates/quiz/startPage.html
+++ b/quiz/templates/quiz/startPage.html
@@ -11,5 +11,10 @@
   </head>
   <body>
     <div>우정퀴즈에 온 걸 환영한다구!!</div>
+    <a href={% url 'generate' %}>
+      <button>
+        퀴즈 출제 시작하기
+      </button>
+    </a>
   </body>
 </html>
