--- a/quiz/templates/quiz/generateResultPage.html
+++ b/quiz/templates/quiz/generateResultPage.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div>{{ quiz_set_id }}번 퀴즈를 출제하는데 성공했다구~</div>
-    <div>퀴즈를 풀게 하고 싶으면 <a href={% url 'solve' id=quiz_set_id %}>여기로</a> 가라구</div>
+    <div>퀴즈를 풀게 하고 싶으면 <a href={% url 'solve' quiz_set_id=quiz_set_id %}>여기로</a> 가라구</div>
   </body>
 </html>
