--- a/quiz/templates/quiz/generatePage.html
+++ b/quiz/templates/quiz/generatePage.html
@@ -1,14 +1,6 @@
-{% load static %}
+{% extends 'quiz/_default.html' %} 
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/start.css' %}" />
-    <title>Friendship Quiz</title>
-  </head>
+{% block content %}
   <body>
     <div>퀴즈를 만드는 페이지</div>
     <span>이름</span>
@@ -17,4 +9,4 @@
       <button>퀴즈 다 냈음</button>
     </a>
   </body>
-</html>
+{% endblock %}
