--- a/quiz/templates/quiz/solvePage.html
+++ b/quiz/templates/quiz/solvePage.html
@@ -1,16 +1,8 @@
-{% load static %}
+{% extends 'quiz/_default.html' %} 
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/start.css' %}" />
-    <title>Friendship Quiz</title>
-  </head>
+{% block content %}
   <body>
     <div>{{ quiz_set_id }}번 퀴즈를 푸는 페이지</div>
     <div>다 풀었으면 결과 보러 가셈</div>
   </body>
-</html>
+{% endblock %}
