page별 css 파일 생성

--- a/quiz/templates/quiz/generatePage.html
+++ b/quiz/templates/quiz/generatePage.html
@@ -1,6 +1,8 @@
 {% extends 'quiz/_default.html' %} 
+{% load static %}
 
 {% block content %}
+  <link rel="stylesheet" href="{% static 'css/page/generatePage.css' %}" />
   <body>
     <div>퀴즈를 만드는 페이지</div>
     <span>이름</span>
