--- a/quiz/templates/quiz/generateResultPage.html
+++ b/quiz/templates/quiz/generateResultPage.html
@@ -1,6 +1,8 @@
 {% extends 'quiz/_default.html' %} 
+{% load static %}
 
 {% block content %}
+  <link rel="stylesheet" href="{% static 'css/page/generateResultPage.css' %}" />
   <body>
     <div>{{ quiz_set_id }}번 퀴즈를 출제하는데 성공했다구~</div>
     <div>퀴즈를 풀게 하고 싶으면 <a href={% url 'solve' quiz_set_id=quiz_set_id %}>여기로</a> 가라구</div>
