--- a/quiz/templates/quiz/resultPage.html
+++ b/quiz/templates/quiz/resultPage.html
@@ -1,6 +1,8 @@
 {% extends 'quiz/_default.html' %} 
+{% load static %}
 
 {% block content %}
+  <link rel="stylesheet" href="{% static 'css/page/resultPage.css' %}" />
   <body>
     <div>{{quiz_set_id}}번 퀴즈의 {{result_id}}번 답안 결과 페이지임</div>
   </body>
