--- a/quiz/templates/quiz/solvePage.html
+++ b/quiz/templates/quiz/solvePage.html
@@ -1,6 +1,8 @@
-{% extends 'quiz/_default.html' %} 
+{% extends 'quiz/_default.html' %}
+{% load static %}
 
 {% block content %}
+  <link rel="stylesheet" href="{% static 'css/page/solvePage.css' %}" />
   <body>
     <div>{{ quiz_set_id }}번 퀴즈를 푸는 페이지</div>
     <div>다 풀었으면 결과 보러 가셈</div>
