default.html 반응형 세팅

--- a/quiz/templates/quiz/startPage.html
+++ b/quiz/templates/quiz/startPage.html
@@ -4,10 +4,10 @@
 {% block content %}
   <link rel="stylesheet" href="{% static 'css/page/startPage.css' %}" />
   <body>
-    <div>우정퀴즈에 온 걸 환영한다구!!</div>
+    <div>우정퀴즈에 온 걸 환영한다구!! 버튼을 눌러 퀴즈 출제를 시작하라구!! 얼릉 퀴즈 출제를 시작행 시작하라구</div>
     <a href={% url 'generate' %}>
       <button>
-        퀴즈 출제 시작하기
+        퀴즈 출제 시작하기 
       </button>
     </a>
   </body>
