--- a/quiz/templates/quiz/_default.html
+++ b/quiz/templates/quiz/_default.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/_default.css' %}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,5 +17,9 @@
     <link rel="stylesheet" href="{% static 'css/font.css' %}" />
     <title>★우정퀴즈★</title>
   </head>
-  {% block content %} {% endblock %}
+  <div class="default-background">
+    <div class="default-app-area">
+      <div class="default-app-content">{% block content %} {% endblock %}</div>
+    </div>
+  </div>
 </html>
