--- a/quiz/static/css/page/generatePage.css
+++ b/quiz/static/css/page/generatePage.css
@@ -5,3 +5,43 @@ ul.errorlist {
 .error {
   color: red;
 }
+body {
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  color: white;
+}
+
+.main {
+  font-family: UhBee MiMi;
+  font-size: 28px;
+  text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(255, 163, 250), 0 0 5px rgb(168, 138, 238);
+}
+
+.examiner {
+  font-family: UhBee ZZIBA;
+  font-size: 18px;
+  color:rgb(226, 163, 255);
+  text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
+}
+
+.quiznumb {
+  font-family: UhBee MiMi;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(125, 125, 255), 0 0 5px rgb(200, 133, 255);
+}
+
+.submitquiz {
+  color: black;
+}
+
+.answer {
+  font-family: UhBee ZZIBA;
+  color:rgb(226, 163, 255);
+  text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
+}
+
+.submitquiz {
+  font-family: UhBee ZZIBA;
+  font-size: 18px;
+}
