--- a/quiz/static/css/_default.css
+++ b/quiz/static/css/_default.css
@@ -7,8 +7,12 @@
 }
 
 .default-app-area {
-  background-color: #ffffff;
+  background-color: #000000;
+  background-image: url("C:/Users/변정민/Desktop/space.png");
+  background-attachment: fixed;
   width: 450px;
+  
+  
   box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.15);
 }
 
