--- a/quiz/static/css/page/resultPage.css
+++ b/quiz/static/css/page/resultPage.css
@@ -1,3 +1,9 @@
 body {
-  color: orange;
+  font-family: UhBee ZZIBA;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 60px;
+  text-align: center;
+  color: white;
 }
