--- a/quiz/templates/quiz/generateResultPage.html
+++ b/quiz/templates/quiz/generateResultPage.html
@@ -4,7 +4,13 @@
 {% block content %}
   <link rel="stylesheet" href="{% static 'css/page/generateResultPage.css' %}" />
   <body>
-    <div>{{ quiz_set_id }}번 퀴즈를 출제하는데 성공했다구~</div>
-    <div>퀴즈를 풀게 하고 싶으면 <a href={% url 'solve' quiz_set_id=quiz_set_id %}>여기로</a> 가라구</div>
+    <div class="quizcomplete">{{ quiz_set_id }}번 퀴즈를 출제하는 데 성공했습니다!</div>
+    <div class="movetosolve">퀴즈를 풀게 하고 싶으면 <a href={% url 'solve' quiz_set_id=quiz_set_id %}>여기로</a> 가라구</div>
+    <div class="copyturl">하단의 링크를<br>지인들에게 공유해 보세요!</div><br>
+
+    <!--복사 기능,url 추가 요망-->
+    <button type="button" onclick="alert('복사가 완료되었습니다.')">
+    링크 복사하기
+    </button>
   </body>
 {% endblock %}
