--- a/quiz/templates/quiz/generatePage.html
+++ b/quiz/templates/quiz/generatePage.html
@@ -4,7 +4,7 @@
   <div class="main">퀴즈를 만드는 페이지</div>
   <form action="{% url 'generate' %}" method="post">
     {% csrf_token %}
-    <div class="examiner">{{quiz_set_form.as_p}}</div>
+    <div class="quizhost">{{quiz_set_form.as_p}}</div>
     <div>{{ quiz_form_set.management_form }}</div>
     {% if messages %}
       {% for message in messages %}
@@ -12,7 +12,7 @@
       {% endfor %}
     {% endif %}
     {% for quiz_form in quiz_form_set %}
-    <div>
+    <div class="makequiz">
       <hr />
       <div class="quiznumb">{{ forloop.counter }}번 문제</div>
       <div class="answer">{{quiz_form.as_p}}</div>
@@ -21,7 +21,6 @@
     <div class="submitquiz">
       <input type="submit" value="출제" />
     </div>
-   
   </form>
 </body>
 {% endblock %}
