--- a/quiz/static/css/page/generatePage.css
+++ b/quiz/static/css/page/generatePage.css
@@ -18,22 +18,27 @@ body {
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(255, 163, 250), 0 0 5px rgb(168, 138, 238);
 }
 
-.examiner {
+.quizhost {
   font-family: UhBee ZZIBA;
   font-size: 18px;
   color:rgb(226, 163, 255);
   text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
 }
 
+.makequiz{
+  font-size: 20px;
+}
+
 .quiznumb {
   font-family: UhBee MiMi;
-  font-size: 24px;
+  font-size: 26px;
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(125, 125, 255), 0 0 5px rgb(200, 133, 255);
 }
 
 .submitquiz {
-  color: black;
-}
+  color: rgb(80, 0, 146);
+  text-align: center;
+} 
 
 .answer {
   font-family: UhBee ZZIBA;
