--- a/quiz/templates/quiz/startPage.html
+++ b/quiz/templates/quiz/startPage.html
@@ -6,6 +6,7 @@
   <body>
     <h1>우정퀴즈에</h1>
     <h1 class="welcome1">오신 것을 환영합니다</h1>
+    <img src="{% static "images/plough.png" %}">
     <div class="welcome2">하단 버튼을 눌러<br>퀴즈 출제를 시작하세요···</div>
     <button class="startbutton">
       <a href={% url 'generate' %}>퀴즈 출제 시작하기
