--- a/quiz/static/css/page/generatePage.css
+++ b/quiz/static/css/page/generatePage.css
@@ -13,13 +13,13 @@ body {
 }
 
 .main {
-  font-family: UhBee MiMi;
+  font-family: 'UhBee MiMi';
   font-size: 28px;
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(255, 163, 250), 0 0 5px rgb(168, 138, 238);
 }
 
 .quizhost {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   font-size: 18px;
   color:rgb(226, 163, 255);
   text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
@@ -30,7 +30,7 @@ body {
 }
 
 .quiznumb {
-  font-family: UhBee MiMi;
+  font-family: 'UhBee MiMi';
   font-size: 26px;
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(125, 125, 255), 0 0 5px rgb(200, 133, 255);
 }
@@ -41,12 +41,12 @@ body {
 } 
 
 .answer {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   color:rgb(226, 163, 255);
   text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
 }
 
 .submitquiz {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   font-size: 18px;
 }
