--- a/quiz/static/css/page/generateResultPage.css
+++ b/quiz/static/css/page/generateResultPage.css
@@ -1,5 +1,5 @@
 body {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -25,7 +25,7 @@ a {
 
 .copyurl {
   
-  font-family: UhBee BEOJJI;
+  font-family: 'UhBee BEOJJI';
   font-size: 22px;
   line-height: 50px;
   text-shadow: -1px -1px 30px #ffaaf1, 3px 3px 50px rgba(255, 255, 255, 0.5);
