--- a/quiz/static/css/page/resultPage.css
+++ b/quiz/static/css/page/resultPage.css
@@ -1,5 +1,5 @@
 body {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -10,7 +10,7 @@ body {
 
 .resulttitle {
   margin-top: 50px;
-  font-family: UhBee MiMi;
+  font-family: 'UhBee MiMi';
   font-size: 28px;
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(125, 125, 255), 0 0 5px rgb(200, 133, 255);
 }
