--- a/quiz/static/css/page/solvePage.css
+++ b/quiz/static/css/page/solvePage.css
@@ -1,5 +1,5 @@
 body {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -9,13 +9,13 @@ body {
 }
 
 .solvenumb {
-  font-family: UhBee MiMi;
+  font-family: 'UhBee MiMi';
   font-size: 28px;
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(255, 163, 250), 0 0 5px rgb(168, 138, 238);
 }
 
 .quizguest {
-  font-family: UhBee ZZIBA;
+  font-family: 'UhBee ZZIBA';
   font-size: 18px;
   color:rgb(226, 163, 255);
   text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
