--- a/quiz/templates/quiz/resultPage.html
+++ b/quiz/templates/quiz/resultPage.html
@@ -4,11 +4,15 @@
 {% block content %}
   <link rel="stylesheet" href="{% static 'css/page/resultPage.css' %}" />
   <body>
-    <div class="resulttitle">{{quiz_set_id}}번 퀴즈의 {{result_id}}번 답안 결과 페이지</div><br>
+    <div class="resulttitle">{{quiz_set_id}}번 퀴즈에 대한<br>{{guest}}님의 답안 결과 페이지</div><br>
     <!--답안 불러오기-->
     <div class="guestans">당신의 답은</div>
     <div class="ans">{{result_id}}번 문제의 답은</div>
-    <div class="sumpoint">맞은 문제 점수 : {{answer.points}}/7</div><br>
+    <div class="sumpoint">맞은 문제 점수 : {{points}}/7</div><br>
     <img src="{% static "images/plough.png" %}">
+    <button class="startbutton">
+      <a href={% url 'generate' %}>퀴즈 출제 시작하기
+      </a>  
+    </button>
   </body>
 {% endblock %}
