리더보드,나도퀴즈출제버튼 추가

--- a/quiz/templates/quiz/resultPage.html
+++ b/quiz/templates/quiz/resultPage.html
@@ -9,6 +9,28 @@
     <div class="guestans">당신의 답은</div>
     <div class="ans">{{result_id}}번 문제의 답은</div>
     <div class="sumpoint">맞은 문제 점수 : {{answer.points}}/7</div><br>
-    <img src="{% static "images/plough.png" %}">
+
+    <div class="leaderboard">명예의 전당</div>
+    <table align="center">
+      <tr>
+        <th>이름</th>
+        <th>점수</th>
+      </tr>
+      <tr>
+        <!--예시입니다-->
+        <td>젤리</td>
+        <td>5/7</td>
+      </tr>
+    </table><br>
+
+    <div class="share">SNS 공유</div>
+    <img class="fb" src="{% static "images/facebook.png" %}">
+    <img class="insta" src="{% static "images/instagram.png" %}"><br>
+    <img class="katalk" src="{% static "images/kakaotalk.png" %}">
+    <img class="twit" src="{% static "images/twitter.png" %}"><br>
+    <button class="metoo">
+      <a href={% url 'generate' %}>나도 퀴즈 출제하기
+      </a>
+    </button>
   </body>
 {% endblock %}
