--- a/quiz/static/css/page/resultPage.css
+++ b/quiz/static/css/page/resultPage.css
@@ -29,3 +29,58 @@ body {
   font-size: 24px;
   text-shadow: 0px 4px 20px #D6C7FF, 0px 4px 20px #BFC9FF;
 }
+
+.leaderboard {
+  font-size: 26px;
+  text-shadow: 0px 4px 20px #D6C7FF, 0px 4px 20px #BFC9FF;
+}
+
+table, th, td {
+  border: 3px dotted white;
+  text-align: center;
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.share {
+  font-size: 26px;
+  text-shadow: 0px 4px 20px #D6C7FF, 0px 4px 20px #BFC9FF;
+}
+
+img:hover {
+  opacity: 0.7;
+}
+
+.fb {
+  margin-right: 20px;
+}
+
+.katalk {
+  margin-right: 20px;
+}
+
+.metoo {
+  text-align: center;
+  font-size: 18px;
+  background: linear-gradient(21deg, #d710ff5b, #82b8ff7e);
+  border: 0px solid #ffffff;
+  border-radius: 13px;
+  width: 180px;
+  height: 40px;
+  line-height: 0px;
+  margin-top: 30px;
+  margin-bottom: 70px;
+}
+
+a {
+  font-family: 'UhBee ZZIBA';
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  text-shadow: 0px 4px 20px #D6C7FF, 0px 4px 20px #BFC9FF;
+
+}
+
+a:hover {
+  color: rgba(255, 218, 246, 0.726);
+}
