default 배경 이미지 축소, SNS링크 연결, 풀이페이지 이름입력란 및 제출버튼 수정

--- a/quiz/templates/quiz/resultPage.html
+++ b/quiz/templates/quiz/resultPage.html
@@ -21,10 +21,8 @@
     </table><br>
 
     <div class="share">SNS 공유</div>
-    <img class="fb" src="{% static "images/facebook.png" %}">
-    <img class="insta" src="{% static "images/instagram.png" %}"><br>
-    <img class="katalk" src="{% static "images/kakaotalk.png" %}">
-    <img class="twit" src="{% static "images/twitter.png" %}"><br>
+    <a href="https://www.facebook.com/" target="_blank"><img class="fb" src="{% static "images/facebook.png" %}"></a>
+    <a href="https://www.instagram.com/" target="_blank"><img class="insta" src="{% static "images/instagram.png" %}"></a><br>
     <button class="metoo">
       <a href={% url 'generate' %}>나도 퀴즈 출제하기
       </a>
