--- a/quiz/static/css/page/solvePage.css
+++ b/quiz/static/css/page/solvePage.css
@@ -25,11 +25,17 @@ body {
   text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
 }
 
+.guestname {
+  font-family: 'UhBee ZZIBA';
+  font-size: 18px;
+  color:rgb(226, 163, 255);
+}
+
 .questions {
   line-height: 40px;
 }
 
-Button {
+.btn {
   color: rgb(255, 255, 255);
   text-align: center;
   text-shadow: 0px 4px 20px #D6C7FF, 0px 4px 20px #BFC9FF;
@@ -43,6 +49,6 @@ Button {
   margin-bottom: 20px;
 }
 
-Button:hover {
+.btn:hover {
   color: rgba(255, 168, 241, 0.603);
 }
