배경화면 이슈 해결

--- a/quiz/templates/quiz/_default.html
+++ b/quiz/templates/quiz/_default.html
@@ -14,8 +14,9 @@
     <title>★우정퀴즈★</title>
   </head>
   <div class="default-background">
-    <div class="default-app-area">
-      <div class="default-app-content">{% block content %} {% endblock %}</div>
-    </div>
+    <div class="default-app-background"></div>
+      <div class="default-app-content">
+        {% block content %} {% endblock %}
+      </div>
   </div>
 </html>
