--- a/quiz/templates/quiz/solvePage.html
+++ b/quiz/templates/quiz/solvePage.html
@@ -8,7 +8,7 @@
     <!--퀴즈 응답자 이름 적는 란-->
     <form action="{% url 'solve' quiz_set_id %}" method="post" onsubmit="return false" id="Form">
       {% csrf_token %}
-      <div class="quizguest">퀴즈 푸는 사람:</div> <input type="text" name="guestname" class="guestname" required>
+      <div class="quizguest">퀴즈 푸는 사람:</div> <input type="text" name="guestname" class="guestname" required maxlength="10">
       {% if messages %}
         {% for message in messages %}
           <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
