opengraph image meta tag 삽입

--- a/quiz/templates/quiz/_default.html
+++ b/quiz/templates/quiz/_default.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="{% static 'css/font.css' %}" />
+    <meta property="og:title" content="★우정퀴즈★">
+    <meta property="og:description" content="우정퀴즈를 출제하고, 풀어보세요!">
+    <meta property="og:image" content="{% static 'images/head-image.png' %}">
     <title>★우정퀴즈★</title>
   </head>
   <div class="default-background">
