--- a/quiz/static/css/page/resultPage.css
+++ b/quiz/static/css/page/resultPage.css
@@ -35,11 +35,19 @@ body {
   text-shadow: 0px 4px 20px #D6C7FF, 0px 4px 20px #BFC9FF;
 }
 
+table {
+  margin: 0 auto;
+}
+
 table, th, td {
   border: 3px dotted white;
   text-align: center;
   width: 300px;
   background-color: rgba(255, 255, 255, 0.05);
+}
+
+td div {
+  height: 30%;
 }
 
 .share {
