--- a/quiz/templates/quiz/solvePage.html
+++ b/quiz/templates/quiz/solvePage.html
@@ -18,13 +18,14 @@
 
       <div class='questions'>
         {% for quiz, is_checked in quizes %}
-          <h2>{{quiz.question}}</h2>
+          <div>
+              <h2>{{ forloop.counter }}. {{quiz.question}}</h2>
+          </div>
           <input type="radio" name="{{ forloop.counter }}" id="{{ forloop.counter }}_1" value="1" {% if is_checked == 1 %} checked {% endif%}> <label for="{{ forloop.counter }}_1">{{quiz.option_1}}</label><br>
           <input type="radio" name="{{ forloop.counter }}" id="{{ forloop.counter }}_2" value="2" {% if is_checked == 2 %} checked {% endif%}> <label for="{{ forloop.counter }}_2">{{quiz.option_2}}</label><br>
           <input type="radio" name="{{ forloop.counter }}" id="{{ forloop.counter }}_3" value="3" {% if is_checked == 3 %} checked {% endif%}> <label for="{{ forloop.counter }}_3">{{quiz.option_3}}</label><br>
           <input type="radio" name="{{ forloop.counter }}" id="{{ forloop.counter }}_4" value="4" {% if is_checked == 4 %} checked {% endif%}> <label for="{{ forloop.counter }}_4">{{quiz.option_4}}</label><br>
           <input type="radio" name="{{ forloop.counter }}" id="{{ forloop.counter }}_5" value="5" {% if is_checked == 5 %} checked {% endif%}> <label for="{{ forloop.counter }}_5">{{quiz.option_5}}</label><br>
-
         {% endfor %}
       </div>
       <button type="submit" value="퀴즈제출" class="btn" onclick="btnClick()">퀴즈 제출 및 점수 확인</button>
