--- a/quiz/static/css/page/generatePage.css
+++ b/quiz/static/css/page/generatePage.css
@@ -25,9 +25,14 @@ body {
   text-shadow: 0 0 3px rgb(171, 125, 255), 0 0 10px blue;
 }
 
+.quizhost p {
+  margin: 3rem 0;
+}
+
 .makequiz{
   font-size: 20px;
   text-align: left;
+  padding: 3rem 0;
 }
 
 .quiznumb {
@@ -35,6 +40,7 @@ body {
   font-size: 26px;
   text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(125, 125, 255), 0 0 5px rgb(200, 133, 255);
   margin: 0 2rem;
+  text-align: center;
 }
 
 .submitquiz {
